Add goal features, auth hardening, and Docker/Render deploy